# chronal-api

./: .gitignore  Dockerfile  Dockerfile.dev  LICENSE.txt  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: python.yaml
chronal_api/: __about__.py  __init__.py  alembic.ini  auth.py  database.py  log.py  main.py  schemas.py  settings.py  utils.py
chronal_api/alembic/: env.py
chronal_api/alembic/versions/: 7d3900c8ad94_.py  ef351b1ea36e_.py  f3b6e695a4c7_.py
chronal_api/auth/: dependencies.py  models.py  schemas.py  service.py  user_manager.py
chronal_api/calendar/: dependencies.py  models.py  router.py  schemas.py  service.py
chronal_api/calendar_access/: dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
chronal_api/calendars/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
chronal_api/core/: __init__.py  abc.py  config.py  debug.py  user_manager.py
chronal_api/core/db/: __init__.py  db.py  dependencies.py
chronal_api/db/: chronal_psql.py
chronal_api/events/: dependencies.py  models.py  router.py  schemas.py  service.py
chronal_api/lib/: repository.py  router.py  schemas.py
chronal_api/lib/auth/: dependencies.py  exceptions.py  models.py  repository.py  security.py  service.py
chronal_api/lib/database/: dependencies.py  engine.py  mixins.py  types.py
chronal_api/lib/repository/: __init__.py  exceptions.py  repository.py  sqlalchemy.py  utils.py
chronal_api/lib/service/: __init__.py  exceptions.py  service.py
chronal_api/models/: _timestamps.py  user.py
chronal_api/schemas/: user.py
chronal_api/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 2023-09-17_add_user_model.py  2023-09-19_add_access_token_model.py  2023-10-08_add_calendar_model.py
tests/: conftest.py  data.py  database.py  factories.py  test_calendar_access_router.py  test_calendars_router.py  test_chronal_api.py  test_events_router.py  test_index.py  test_users_router.py
tests/calendars/: test_repository.py  test_router.py  test_service.py
tests/users/: test_repository.py  test_router.py  test_service.py
tests_lib/: conftest.py  model.py  models.py
tests_lib/integration/: test_integration_sqlalchemy_repository.py  test_sqlalchemy_repository.py
tests_lib/unit/: test_auth_repository.py  test_auth_service.py  test_service.py  test_sqlalchemy_repository.py  test_utils.py
