[tool.poetry]
name = "chronal-api"
version = "0.1.0"
description = ""
authors = ["bartosz121 <bmagiera121@gmail.com>"]
readme = "README.md"
packages = [{ include = "chronal_api" }]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.0"
pydantic-settings = "^2.0.3"
uvicorn = { extras = ["all"], version = "^0.23.2" }
httptools = "^0.6.0"
uvloop = "^0.17.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
asyncpg = "^0.28.0"
alembic = "^1.11.3"
httpx = "^0.24.1"
poethepoet = "^0.22.0"
aiosqlite = "^0.19.0"
pysqlite3 = "^0.5.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.286"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
coverage = { extras = ["toml"], version = "^7.3.0" }


[tool.ruff]
target-version = "py311"
line-length = 119
unfixable = [
    "F401", # Don't touch unused imports
    "F841", # Don't touch unused variables
]


[tool.black]
target-version = ["py311"]
line-length = 119


[tool.poe.executor]
type = "virtualenv"
location = ".venv"


[tool.poe.tasks.test-chronal-api]
help = "Run tests chronal-api"
cmd = "pytest -vv tests"


[tool.poe.tasks.test-lib]
help = "Run tests lib"
cmd = "pytest -vv tests_lib"


[tool.poe.tasks.test]
help = "Run tests"


[[tool.poe.tasks.test.sequence]]
ref = "test-chronal-api"


[[tool.poe.tasks.test.sequence]]
ref = "test-lib"


[tool.poe.tasks.serve]
help = "Run uvicorn server"
cmd = "python chronal_api/main.py"
use_exec = true


[tool.poe.tasks.healthcheck]
help = "Run healthcheck"
shell = "curl --silent --fail http://localhost:$(python -c 'from chronal_api.settings import UvicornSettings;print(UvicornSettings().port)')/healthcheck"

# [tool.poe.tasks.mypy]
# help = "Run mypy"
# cmd = "mypy --install-types --non-interactive chronal_api"


[tool.poe.tasks.lint]
help = "Run lint check"


[[tool.poe.tasks.lint.sequence]]
help = "Run black check ."
cmd = "black --check --diff ."


[[tool.poe.tasks.lint.sequence]]
help = "Run ruff check"
cmd = "ruff check ."


[tool.poe.tasks.format]
help = "Run formatters"


[[tool.poe.tasks.format.sequence]]
help = "Run black"
cmd = "black ."

[[tool.poe.tasks.format.sequence]]
help = "Run ruff"
cmd = "ruff --fix ."


[tool.ruff.isort]
known-first-party = ["chronal_api"]


[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"


[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]


[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.coverage.run]
source_pkgs = ["chronal_api", "tests"]
branch = true
parallel = true
omit = ["chronal_api/__about__.py"]


[tool.coverage.paths]
chronal_api = ["chronal_api", "*/chronal-api/chronal_api"]
tests = ["tests", "*/chronal-api/tests"]


[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
